@@ -11,6 +11,7 @@ http://mapping.referata.com/wiki/Maps/Version_history#Maps_change_log
 (2011-0x-xx)
 
 * Updated OpenLayers from 2.10 to 2.11.
+* Fixed bug in adding adittional markers for Google Maps v3 (mainly affecting the Semantic Maps form input).
 
 === Maps 1.0.3 ===
 (2011-09-14)
